--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Metadatos -->
     <meta charset="utf-8">
     <meta name="author" content="Myrahis Sanluis">
-    <meta name="description" content="Portafolio de desarrollo web de Myrahis Sanluis">
+    <meta name="description" content="Portafolio de desarrollo web de Myrahis">
     <meta name="keywords" content="HTML, CSS, JavaScript, React">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Titulo -->
@@ -129,7 +129,7 @@
             <div class="proyecto">
               <img src="imagenes/Google.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 1</p>
+                <p>Clon de Google</p>
                 <div class="iconos-contenedor">
                   <a href="https://myrahissanluis.github.io/Clone-de-Google.github.io/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
@@ -144,7 +144,7 @@
           <!-- Proyecto 2 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto2.png" alt="Proyecto 1">
+              <img src="https://th.bing.com/th/id/OIP.YEwTQwE3VITkdNN0ggSIaQHaEK?rs=1&pid=ImgDetMain" alt="Proyecto 1">
               <div class="overlay">
                 <p>Mi CV</p>
                 <div class="iconos-contenedor">
@@ -161,9 +161,9 @@
           <!-- Proyecto 3 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto3.png" alt="Proyecto 1">
+              <img src="imagenes/morat_página_web.png" alt="Proyecto 3">
               <div class="overlay">
-                <p>Proyecto 3</p>
+                <p>Mi Banda favorita</p>
                 <div class="iconos-contenedor">
                   <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
@@ -178,7 +178,7 @@
           <!-- Proyecto 4 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto4.png" alt="Proyecto 1">
+              <img src="https://media.istockphoto.com/vectors/under-construction-website-page-under-construction-tape-warning-vector-id1347081361?k=20&m=1347081361&s=170667a&w=0&h=J07jzrDvGGnrgKEXSWaBeiz-S1eobXgAbdNA8It5uoo=" alt="Proyecto 1">
               <div class="overlay">
                 <p>Proyecto 4</p>
                 <div class="iconos-contenedor">
@@ -195,7 +195,7 @@
           <!-- Proyecto 5 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto5.png" alt="Proyecto 1">
+              <img src="https://media.istockphoto.com/vectors/under-construction-website-page-under-construction-tape-warning-vector-id1347081361?k=20&m=1347081361&s=170667a&w=0&h=J07jzrDvGGnrgKEXSWaBeiz-S1eobXgAbdNA8It5uoo=" alt="Proyecto 1">
               <div class="overlay">
                 <p>Proyecto 5</p>
                 <div class="iconos-contenedor">
@@ -212,7 +212,7 @@
           <!-- Proyecto 6 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto6.png" alt="Proyecto 1">
+              <img src="https://media.istockphoto.com/vectors/under-construction-website-page-under-construction-tape-warning-vector-id1347081361?k=20&m=1347081361&s=170667a&w=0&h=J07jzrDvGGnrgKEXSWaBeiz-S1eobXgAbdNA8It5uoo=" alt="Proyecto 1">
               <div class="overlay">
                 <p>Proyecto 6</p>
                 <div class="iconos-contenedor">
